<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mainpage">

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.virus.tupominesweeper.fragments.LeaderboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_mainpage"
        android:name="com.example.virus.tupominesweeper.fragments.MainpageFragment"
        android:label="@string/title_mainpage"
        tools:layout="@layout/fragment_mainpage" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.virus.tupominesweeper.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>