<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/CustomRows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customdiff_rows"
        android:inputType="number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/CustomCols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/customdiff_cols"
        android:inputType="number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/CustomMines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/customdiff_mines"
        android:inputType="number"
        android:textSize="16sp" />
</LinearLayout>